--- a/_includes/js.html
+++ b/_includes/js.html
@@ -1,17 +1,17 @@
  <!-- jQuery Version 1.11.0 -->
-    <script src="{{ " {{site.github.url}}/js/jquery-1.11.0.js" }}"></script>
+    <script src="{{ "/DataScienceFinalProject/js/jquery-1.11.0.js" }}"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="{{ " {{site.github.url}}/js/bootstrap.min.js" }}"></script>
+    <script src="{{ "/DataScienceFinalProject/js/bootstrap.min.js" }}"></script>
 
     <!-- Plugin JavaScript -->
-    <script src="{{ " {{site.github.url}}/js/jquery.easing.min.js" }}"></script>
-    <script src="{{ " {{site.github.url}}/js/classie.js" }}"></script>
-    <script src="{{ " {{site.github.url}}/js/cbpAnimatedHeader.js" }}"></script>
+    <script src="{{ "/DataScienceFinalProject/js/jquery.easing.min.js" }}"></script>
+    <script src="{{ "/DataScienceFinalProject/js/classie.js" }}"></script>
+    <script src="{{ "/DataScienceFinalProject/js/cbpAnimatedHeader.js" }}"></script>
 
 
     <!-- Custom Theme JavaScript -->
-    <script src="{{ " {{site.github.url}}/js/freelancer.js" }}"></script>
+    <script src="{{ "/DataScienceFinalProject/js/freelancer.js" }}"></script>
 
   
    
