unhard coding links

--- a/_layouts/style.css
+++ b/_layouts/style.css
@@ -1,2 +1,2 @@
-{% include /DataScienceFinalProject/css/bootstrap.min.css %}
-{% include /DataScienceFinalProject/css/main.css %}
+{% include /css/bootstrap.min.css %}
+{% include /css/main.css %}
