Adding the video

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,11 +9,13 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
+                    <iframe width="420" height="315" src="https://www.youtube.com/embed/_vj-e62mPkw" frameborder="0" allowfullscreen></iframe>
                     <p>The rising cost of healthcare is one of the world’s most important problems. Healthcare policy researchers have devoted much effort toward finding solutions to the fast growth in health care spending over the past decade. Research has provided evidence that the growth is linked to modifiable population risk factors such as obesity and stress. Rising disease prevalence and new medical treatments account for nearly two-thirds of the rising spending. As MA residents, we are directly concerned with how the state controls its healthcare cost. As one article in Boston Globe put it, “The soaring costs of insuring the state’s poorest residents drove health care spending in MA up 4.8 percent last year, double the rate of growth in 2013, dealing a setback to the state’s effort to control medical costs.” /<p> <br>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                 
                                         <img class="img-responsive" src="img/highcost.png" alt="">
+                                        Source: NIHCM Foundation Data Brief 2012. http://www.nihcm.org/
 
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">   <br>
