--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -6,6 +6,8 @@
                 <div class="col-lg-12 text-center">
                     <h2>Models</h2>
                     <hr class="star-primary">
+                    Click on a model below to learn more about our approach. 
+                    <br>
                 </div>
             </div>
             <div class="row">
