--- a/_includes/discussion.html
+++ b/_includes/discussion.html
@@ -1,10 +1,10 @@
  <!-- Discussion Section -->
-    <section class="success" id="discussion">
+    <section  id="discussion">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2>Discussion</h2>
-                    <hr class="star-light">
+                    <hr class="discussion-primary">
                 </div>
             </div>
             <div class="row">
