--- a/_includes/data.html
+++ b/_includes/data.html
@@ -1,10 +1,10 @@
  <!-- Discussion Section -->
-    <section class="success" id="data">
+    <section id="data">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2>The Data</h2>
-                    <hr class="chart-light">
+                    <hr class="doctor-primary">
                 </div>
             </div>
             <div class="row">
