--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -19,6 +19,9 @@
                         <a href="#page-top"></a>
                     </li>
                     <li class="page-scroll">
+                        <a href="#screencast">Screencast</a>
+                    </li>
+                    <li class="page-scroll">
                         <a href="#about">About</a>
                     </li>
                     <li class="page-scroll">
