--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -1,11 +1,11 @@
 
     <!-- Portfolio Grid Section -->
-    <section   id="portfolio">
+    <section class="success"  id="portfolio">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2>Models</h2>
-                    <hr class="star-primary">
+                    <hr class="chart-light">
                     Click on a model below to learn more about our approach. 
                     <br>
                 </div>
