Final commit! Reworded and reformatted a few things

--- a/_includes/discussion.html
+++ b/_includes/discussion.html
@@ -10,6 +10,7 @@
             <div class="row">
                 
                 <div class="col-lg-8 col-lg-offset-2 text-center">
+                <p> We compared the performance of the best model given by each approach along measures of accuracy, sensitivity, and specificity. As expected for such high-dimensional data, we found that each of the algorithms had unique strengths in either performance or interpretability.</p>
                 
                                         <img class="img-responsive" src="img/FinalComparison.png" alt=""><br>
 
