--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,7 +9,7 @@
                         <ul class="list-inline">
                             {% for related in site.related %}
                             <li>
-                                <a href="{{ related.url }}" >{{ related.line }}</a>
+                                <p><a href="{{ related.url }}" >{{ related.line }}</a></p>
                             </li>
 		                    {% endfor %}
                         </ul>
