--- a/_includes/data.html
+++ b/_includes/data.html
@@ -21,7 +21,7 @@
                 </div>
                 <div class="col-lg-4 ">
                     <p> Our data prepare phase includes collecting claims associated with the same patients and aggregate information to patient-level. Our final analytic dataset includes:</p>
-                    <ul class="list-inline item-details">
+                    <ul >
                         <li>70 Chronic Disease indicators, e.g. HCC (Hierarchical Condition Category)
                         </li>
                         <li>283 Diagnosis indicator, e.g. DXCCS (Diagnosis Clinical Classification Software)
@@ -35,24 +35,24 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h3>Exploratory Data Analysis</h3> <br>
                 </div>
-                 <div class="col-lg-4 ">
+                <div class="col-lg-8 col-lg-offset-2 text-center">
                  <img class="img-responsive" src="img/age.png" alt="">
                 </div>
-                <div class="col-lg-4 ">
+                <div class="col-lg-6 ">
                 <img class="img-responsive" src="img/gender.png" alt="">
                 </div>
-                <div class="col-lg-4 ">
+                <div class="col-lg-6 ">
                 <img class="img-responsive" src="img/race.png" alt="">
                 </div>
                  
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                  <p>First, we look at demographic information: Age, Gender, and Race. These can be seen in the images above. Second, we look at the relationship between patients’ 2012 medical cost and 2013 medical cost. We anticipate the correlation is strong, because older people with weaker health tend to have chronically high need of medical care.</p> <br>
+                  <p>First, we look at demographic information: Age, Gender, and Race. These can be seen in the images above. We're dealing with an older, mostly white population with more women than men represented.</p><p>  Second, we look at the relationship between patients’ 2012 medical cost and 2013 medical cost. We anticipate the correlation is strong, because older people with weaker health tend to have chronically high need of medical care. </p><br>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                    <img class="img-responsive" src="img/spendingyears.png" alt=""><br>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                  <p>We could clearly see that, spending pattern is so consistent for Medicare beneficiaries, in the sense that, two subsequent years’ medical costs could nearly perfectly predict each other. However, we don’t know if it is true for general population. At least, it tells us that, for Medicare beneficiaries, typically older population >=65, if we know their past year’s medical cost, their next year’s cost is predictable with high confidence. And some people (red dots) are consistently high medical resource utilizers; while others (blue dots) are consistently 0 utilizers, they are healthy population; the rest falling in the middle are relatively healthy and would not drive the total healthcare cost up dramatically. The red dots are the population we care most about. They are the sicker population which have more chronic diseases which need long-term medical assistance.</p>
+                  <p>We can clearly see that, spending pattern is so consistent for Medicare beneficiaries, in the sense that, two subsequent years’ medical costs could nearly perfectly predict each other. However, we don’t know if it is true for general population. At least, it tells us that, for Medicare beneficiaries, typically older population >=65, if we know their past year’s medical cost, their next year’s cost is predictable with high confidence. And some people (red dots) are consistently high medical resource utilizers; while others (blue dots) are consistently 0 utilizers, they are healthy population; the rest falling in the middle are relatively healthy and would not drive the total healthcare cost up dramatically. The red dots are the population we care most about. They are the population with more chronic diseases which need long-term medical assistance.</p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h3>Feature Selection</h3> <br>
