--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -6,7 +6,7 @@
                 <div class="col-lg-12 text-center">
                     <h2>Models</h2>
                     <hr class="chart-light">
-                    Click on a model below to learn more about our approach. 
+                    <p>With these data, we explored a total of five modeling approaches, performing cross-validation to train and test the models. Click on a model below to learn more about our approach. </p>
                     <br>
                 </div>
             </div>
